Added a placeholder page with some styling

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Welcome to the void
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani" rel="stylesheet">
+    <style>
+        .thevoid {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        h1 {
+            font-family: 'Rajdhani', sans-serif;
+        }
+    </style>
+</head>
+<body>
+    <h1>Welcome to the void?</h1>
+</body>
