fix: forgot to add the flex div

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to the void?</h1>
+    <div class="thevoid">
+        <h1>Welcome to the void?</h1>
+    </div>
 </body>
